cmake_minimum_required(VERSION 2.8)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_HAVE_THREADS_LIBRARY 1)
set(CMAKE_USE_WIN32_THREADS_INIT 0)
set(CMAKE_USE_PTHREADS_INIT 1)
set(THREADS_PREFER_PTHREAD_FLAG ON)
project( DisplayImage )
find_package( OpenCV REQUIRED )
message(STATUS "OpenCV_LIBS = ${OpenCV_LIBS}")
message(STATUS "OpenCV_INCLUDE_DIRS = ${OpenCV_INCLUDE_DIRS}")
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( /home/pi/rpi-rgb-led-matrix/include )
link_directories( /home/pi/rpi-rgb-led-matrix/lib )
add_executable( DisplayImage
        src/display_rpi.cpp
        src/display_desktop.cpp
        main.cpp)
target_link_libraries( DisplayImage rgbmatrix )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
